--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #f8d1de 0%, #b9f6f4 100%);
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.App{
+  font-size: 20px;
+  min-height: 100vh;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.generator{
+  background-image: linear-gradient(-225deg, #9adeda 0%, #e3e8a2 100%);
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px rgba(245, 244, 244, 0.863);
+  padding: 30px;
+  max-width: 400px;
+  width: 110%;
+  box-sizing: border-box;
 }
+.generator__header{
+  text-align: center;
+  color: rgb(26, 20, 137);
+  margin-bottom: 20px;
+  font-size: 28px;
+}
+.generator__password{
+  background-color:#c4b6ed;
+  padding: 13px 13px;
+  color: #000000;
+  margin-bottom: 10px;
+  height: 49px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+}
+button{
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content:center;
+}
+.copy__btn{
+  color: #e7faf9;
+  background: #306c97;
+  border: none;
+  cursor: pointer;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background 0.3s;
+  margin-bottom: 10px;
+}
+.copy__btn:hover {
+  background: #253a6a;
+}
+.generator__btn{
+  background: #2e9368ce;
+  border: none;
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  color: #fff;
+  border-radius: 30px;
+  font-size: 17px;
+  cursor: pointer;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.form-group{
+  display: flex;
+  justify-content: space-between;
+  color: gre;
+  margin-bottom: 15px;
 }
